00-mTLS-basics/00-02-mutual-tls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: mgu
spec:
  mtls:
    mode: STRICT
